# NetraInvest

./: .gitignore  DEPLOYMENT.md  QA_CHECKLIST.md  RUNBOOK.md  architecture.md  architecture_v2.md  auth_testing_guide.md  campaign_flow_walkthrough.md  database_design.md  discover_detail_walkthrough.md  frontend_architecture.md  id_strategy.md  implementation_plan.md  invest_flow_walkthrough.md  project_understanding.md  setup-agent.cmd  setup-agent.ps1  setup-agent.sh  smart_contract_design.md  start-agent.cmd  start-agent.ps1  start-agent.sh
agent/: __init__.py  _fetch_ids.py  audit.py  config.py  hitl_store.py  main.py  memory.py  orchestrator.py  pyproject.toml  requirements.txt
agent/agents/: milestone_agent.py  portfolio_agent.py  qa_agent.py  recommendation_agent.py  state.py
agent/api/: app.py  dashboard.html  models.py
agent/api/routes/: admin.py  chat.py  milestones.py  portfolio.py  recommendations.py
agent/tools/: mongo_tools.py
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  ecosystem.config.js  jest.config.js  package-lock.json  package.json  seed_users.js  server.js  test-db-investment.js  update_db.js
backend/scripts/: seed.js  test-concurrency.js
backend/src/: app.js
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: InvestmentLogger.sol  InvestmentPlatform.sol
frontend/: .env.local  .env.local.example  index.html  package-lock.json  package.json  vite.config.js
mobile_app/: .gitignore  README.md  pubspec.yaml
scratch/: fix_matic.js  replace.js
(+191 files in other folders)
